--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "countdown-app",
   "version": "1.0.0",
-  "description": "Ania Brajtkopf",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server",
@@ -23,7 +23,9 @@
     "babel-preset-react": "^6.23.0",
     "css-loader": "^0.26.4",
     "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.10.1",
     "html-webpack-plugin": "^2.28.0",
+    "image-webpack-loader": "^3.2.0",
     "node-sass": "^4.5.0",
     "rimraf": "^2.6.1",
     "sass-loader": "^6.0.3",
